--- a/templates/store/store_addcomment.html
+++ b/templates/store/store_addcomment.html
@@ -1,37 +1,40 @@
 <ons-page ng-controller="store_addcomment">
     <ons-toolbar>
-        <div class="left"><ons-back-button>Back</ons-back-button></div>
+        <div class="left">
+            <ons-back-button>Back</ons-back-button>
+        </div>
         <div class="center">撰寫評論</div>
     </ons-toolbar>
 
-     <ons-list modifier="inset" style="margin-top: 10px">
+    <ons-list modifier="inset" style="margin-top: 10px">
         <ons-list-item class="to-wrapper">
-          <ons-row>
-            <ons-col width="52px">
-                <div class="to-image" back-img="{{avatar_thumb}}"></div>
-            </ons-col>
-            <ons-col>
-              <div class="to-name">{{nickname}}</div>
-              <div class="to-email">{{shopname}}的評論</div>
-            </ons-col>
-          </ons-row>
+            <ons-row>
+                <ons-col width="52px">
+                    <div class="to-image" back-img="{{avatar_thumb}}"></div>
+                </ons-col>
+                <ons-col>
+                    <div class="to-name">{{nickname}}</div>
+                    <div class="to-email">{{shopname}}的評論</div>
+                </ons-col>
+            </ons-row>
         </ons-list-item>
         <ons-list-item>
-          <textarea class="textarea textarea--transparent" placeholder="Message" style="width: 100%; height: 100px;" ng-model="message"></textarea>
+            <textarea class="textarea textarea--transparent" placeholder="Message" style="width: 100%; height: 100px;" ng-model="message"></textarea>
         </ons-list-item>
 
-        <ons-list-item >
-          <input type="range" class="range" ng-model="star" min="0" max="5" step="1">
+        <ons-list-item>
+            <!--<input type="range" class="range" ng-model="star" min="0" max="5" step="1">-->
+            <rating-star count="10" rating="star"></rating-star>
             <span>{{star}} 顆星</span>
         </ons-list-item>
 
-      </ons-list>
+    </ons-list>
 
-      <div style="padding: 10px 9px">
+    <div style="padding: 10px 9px">
         <ons-button modifier="large" style="margin: 0 auto;" ng-click="sendComment()">
-          送出
+            送出
         </ons-button>
-      </div>
+    </div>
 
 
 </ons-page>
