--- a/styles/app.css
+++ b/styles/app.css
@@ -671,7 +671,7 @@ textarea,
   /* line 654, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-avatar {
     min-height: 96px;
-    padding: 20px 36px 20px 84px;
+    padding: 20px 48px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
     /* line 659, /Users/young/orderdrink/www/styles/app.scss */
@@ -688,7 +688,7 @@ textarea,
       background-position: center; }
     /* line 669, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
-      font-size: 22px;
+      font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
@@ -697,21 +697,39 @@ textarea,
     .near_page .card .card-avatar p {
       margin: 0;
       line-height: 18px;
-      font-size: 16px; }
-  /* line 682, /Users/young/orderdrink/www/styles/app.scss */
+      font-size: 18px; }
+    /* line 681, /Users/young/orderdrink/www/styles/app.scss */
+    .near_page .card .card-avatar > i {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      right: 16px;
+      height: 100%;
+      font-size: 36px; }
+  /* line 700, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 684, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 702, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 688, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 706, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 692, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 710, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
@@ -719,33 +737,33 @@ textarea,
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center; }
-      /* line 699, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 717, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 702, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 720, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 705, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 723, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 711, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 729, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 714, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 732, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 723, /Users/young/orderdrink/www/styles/app.scss */
+/* line 741, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 727, /Users/young/orderdrink/www/styles/app.scss */
+/* line 745, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
