--- a/styles/app.scss
+++ b/styles/app.scss
@@ -653,7 +653,7 @@ textarea,
         }
         .card-avatar {
             min-height: 96px;
-            padding: 20px 36px 20px 84px;
+            padding: 20px 48px 20px 84px;
             border-radius: 0 0 2px 2px;
             position: relative;
             .avatar {
@@ -667,7 +667,7 @@ textarea,
                 @include backgroundCover();
             }
             .card-title {
-                font-size: 22px;
+                font-size: 24px;
                 line-height: 30px;
                 margin: 0px;
                 letter-spacing: 1px;
@@ -676,7 +676,25 @@ textarea,
             p {
                 margin: 0;
                 line-height: 18px;
-                font-size: 16px;
+                font-size: 18px;
+            }
+            >i {
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: -moz-box;
+                display: -moz-flex;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-align: center;
+                -ms-flex-align: center;
+                -webkit-align-items: center;
+                -moz-align-items: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                right: 16px;
+                height: 100%;
+                font-size: 36px;
             }
         }
         .card-reveal {
