--- a/styles/app.css
+++ b/styles/app.css
@@ -656,11 +656,14 @@ textarea,
       top: 5px;
       left: 5px;
       z-index: 1; }
-    /* line 638, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 637, D:/Documents/orderdrink_front/styles/app.scss */
+      .near_page .card .card-image .near_buttons button {
+        max-width: 30%; }
+    /* line 641, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-image #googlemap {
       height: 100%;
       width: 100%; }
-  /* line 643, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 646, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-footer {
     position: absolute;
     bottom: 0px;
@@ -668,13 +671,13 @@ textarea,
     width: 100%;
     background-color: #fff;
     opacity: 0.8; }
-  /* line 651, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 654, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-avatar {
     min-height: 96px;
     padding: 20px 48px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
-    /* line 656, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 659, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar > .avatar {
       position: absolute;
       border-radius: 50%;
@@ -686,19 +689,19 @@ textarea,
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    /* line 666, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 669, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar > .card-title {
       font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 673, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 676, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar > p {
       margin: 0;
       line-height: 18px;
       font-size: 18px; }
-    /* line 678, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 681, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-avatar > i {
       display: -webkit-box;
       display: -webkit-flex;
@@ -716,10 +719,10 @@ textarea,
       right: 16px;
       height: 100%;
       font-size: 36px; }
-  /* line 697, D:/Documents/orderdrink_front/styles/app.scss */
+  /* line 700, D:/Documents/orderdrink_front/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 699, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 702, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-reveal .card-header {
       left: 0px;
       width: 100%;
@@ -727,20 +730,20 @@ textarea,
       top: 0px;
       position: absolute;
       box-shadow: 1px 2px 3px #aaa; }
-    /* line 707, D:/Documents/orderdrink_front/styles/app.scss */
+    /* line 710, D:/Documents/orderdrink_front/styles/app.scss */
     .near_page .card .card-reveal .ons-scroller {
       padding-top: 120px; }
-      /* line 709, D:/Documents/orderdrink_front/styles/app.scss */
+      /* line 712, D:/Documents/orderdrink_front/styles/app.scss */
       .near_page .card .card-reveal .ons-scroller .list-item-container {
         line-height: 1;
         font-size: 14px;
         padding: 15px 0px 15px 15px; }
-        /* line 713, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 716, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-left {
           width: 60px;
           margin-right: -60px;
           float: left; }
-          /* line 717, D:/Documents/orderdrink_front/styles/app.scss */
+          /* line 720, D:/Documents/orderdrink_front/styles/app.scss */
           .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-left .avatar {
             width: 40px;
             height: 40px;
@@ -748,33 +751,33 @@ textarea,
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; }
-        /* line 724, D:/Documents/orderdrink_front/styles/app.scss */
+        /* line 727, D:/Documents/orderdrink_front/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right {
           width: 100%;
           float: right; }
-          /* line 727, D:/Documents/orderdrink_front/styles/app.scss */
+          /* line 730, D:/Documents/orderdrink_front/styles/app.scss */
           .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content {
             margin-left: 50px;
             margin-right: 30px; }
-            /* line 730, D:/Documents/orderdrink_front/styles/app.scss */
+            /* line 733, D:/Documents/orderdrink_front/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .name {
               font-weight: 500;
               line-height: 16px;
               font-size: 15px;
               margin-bottom: 6px; }
-            /* line 736, D:/Documents/orderdrink_front/styles/app.scss */
+            /* line 739, D:/Documents/orderdrink_front/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .desc {
               line-height: 16px; }
-            /* line 739, D:/Documents/orderdrink_front/styles/app.scss */
+            /* line 742, D:/Documents/orderdrink_front/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .lucent {
               opacity: 0.4; }
 
-/* line 749, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 752, D:/Documents/orderdrink_front/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 753, D:/Documents/orderdrink_front/styles/app.scss */
+/* line 756, D:/Documents/orderdrink_front/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
