--- a/styles/app.scss
+++ b/styles/app.scss
@@ -634,6 +634,9 @@ textarea,
                 top: 5px;
                 left: 5px;
                 z-index: 1;
+                button{
+                    max-width: 30%;
+                }
             }
             #googlemap {
                 height: 100%;
